Added ChainingFuturesTest